Added Instagram Link

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <ul class="social-links">
         <a href="https://github.com/callmekungfu"><li>Github</li></a>
         <a href="https://linkedin.com/in/yonglinwang"><li>LinkedIn</li></a>
-        <a href="#"><li>Instagram</li></a>
+        <a href="https://www.instagram.com/yonglin_wang/"><li>Instagram</li></a>
       </ul>
     </div>
   </footer>
