--- a/index.html
+++ b/index.html
@@ -135,12 +135,15 @@
       <div class="col-md-12" style="position: relative">
         <div class="contact-form v-center">
           <div class="contact-prompt">
-            <h3 class="animated fast contact-title">Want to Work Together?</h3>
+            <div class="response-icon v-center animated fast hidden">
+              <i class="fas fa-check"></i>
+            </div>
+            <h3 class="animated fast contact-title">Want to <span class="type-write"></span><span class="wrap"></span></h3>
             <p class="animated fast contact-desc">I enjoy talking to passionate people, if you are interested in working together with me, connect with me, or just want to chat, I'm looking forward to hearing from you~</p>
             <button class="btn btn-black btn-fancy contact-btn animated fast">Let's Connect!</button>
           </div>
           <div class="inline-contact">
-            <h4 class="animated fast info-prompt">Hello there! <input type="text" placeholder="Your Name"/>, your email is <input type="email" placeholder="Your Email"/>. How can I help you today?</h4>
+            <h4 class="animated fast info-prompt">Hello there! <input name="name" type="text" class="animated fast contact-info" placeholder="Your Name"/>, your email is <input name="email" type="email" class="animated fast contact-info" placeholder="Your Email"/>. How can I help you today?</h4>
             <div>
               <button class="btn btn-black animated fast step2" data-subject="oppo">
                 I have an opportunity for you
@@ -155,6 +158,9 @@
           </div>
         </div>
         <textarea name="message" id="contactMessage" class="hidden animated fast" placeholder="Type in your message here. Say something nice :)"></textarea>
+        <div class="message-tools">
+          <button class="btn btn-black btn-round animated faster send-btn"><i class="far fa-paper-plane"></i></button>
+        </div>
       </div>
     </div>
   </section>
@@ -180,10 +186,22 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
   <script src="js/anime.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script src="js/link.js"></script>
+
+  <script>
+    var typeOptions = {
+      strings: [ "work together?", "offer me a job?", "chat?", "tell me a joke?", "make a friend?", "ask me a question?" ],
+      typeSpeed: 60,
+      backSpeed: 60,
+      shuffle: true,
+      loop: true
+    }
+    new Typed(".type-write", typeOptions);
+  </script>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74520113-5"></script>
