Added bunch of stuff

--- a/project/kitchon-website/index.html
+++ b/project/kitchon-website/index.html
@@ -39,13 +39,13 @@
       <div class="nav-menu-container">
         <ul class="nav-menu">
           <li class="nav-item">
-            <a class="nav-link" href="/about">My Work</a>
+            <a class="nav-link" href="/">My Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pricing/index.html">About Me</a>
+            <a class="nav-link" href="/">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/newsletter">Let's Talk!</a>
+            <a class="nav-link" href="/#contact">Let's Talk!</a>
           </li>
         </ul>
       </div>
@@ -146,12 +146,7 @@
 
   <section class="chapter1 project-details">
     <div class="container">
-      <div class="col-md-6 v-center">
-        <img class="image-responsive" src="/img/kitchon/prototype1.jpg">
-      </div>
-      <div class="col-md-1">
 
-      </div>
       <div class="col-md-5">
         <h2>Chapter 1</h2>
         <p class="text-muted sub-header">Designing and Composing the Website</p>
@@ -160,6 +155,27 @@
           clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
           consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
           sed diam voluptua.</p>
+      </div>
+      <div class="col-md-1">
+
+      </div>
+      <div class="col-md-6 v-center">
+        <img class="image-responsive" src="/img/kitchon/prototype1.jpg">
+      </div>
+    </div>
+    <div class="container full-width-paragraph">
+      <div class="col-md-12">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+          consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+          takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+          accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+          dolor sit amet.
+        </p>
       </div>
     </div>
   </section>
@@ -176,12 +192,11 @@
         <img src="/img/kitchon/prototype3.jpg" alt="orange tree" />
       </div>
       <div class="carousel-cell">
-          <img src="/img/kitchon/prototype4.jpeg" alt="orange tree" />
+        <img src="/img/kitchon/prototype4.jpeg" alt="orange tree" />
       </div>
       <div class="carousel-cell">
-          <img src="/img/kitchon/prototype5.jpeg" alt="orange tree" />
+        <img src="/img/kitchon/prototype5.jpeg" alt="orange tree" />
       </div>
-
     </div>
     <div class="text-center">
       <p class="text-muted">
