--- a/index.html
+++ b/index.html
@@ -24,177 +24,228 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
-  <!-- Add your site or application content here -->
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-brand-container">
-        <a class="nav-brand-type animated" href="/">Yong Lin Wang</a>
-        <button class="mobile-only mobile-control">
-          <i class="fas fa-bars"></i>
-        </button>
+  <div class="about-me hidden animated">
+    <div class="type-intro container">
+      <div class="col-md-12 v-center">
+        <p class="visuallyhidden">I am Yong Lin Wang. A Multidisciplinary Software Developer</p>
+        <h2 class="animated fast"></h2>
+        <div class="bio animated fast">
+          <div class="close-about-us"><i class="fas fa-arrow-left"></i></div>
+          <h1>Yong Lin Wang</h1>
+          <p class="text-muted sub-header">Hello! Am I the one you are looking for?</p>
+          <p class="about-description">A Chinese-Canadian software developer based in Ottawa. I do web design/development, Java, and Python the most. I worked freelance and started a start-up with two friends. I love new challenges and experiences! If you got any cool idea don't hesitate to contact me! (Ps. I am looking for internship opportunities, please contact me and we can talk more~)</p>
+          <div class="container w-100 about-details">
+            <div class="col-md-4">
+              <h3>Recognitions</h3>
+              <ul>
+                <li>OTSCxIT ADMINISTRATION BRONZE - 2016</li>
+                <li>OTSCxWEB DEVELOPMENT BRONZE - 2017</li>
+                <li>OTSCxWEV DEVELOPMENT SILVER - 2018</li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <h3>Skills</h3>
+              <p>HTML5, CSS3, jQuery, javascript, ReactJS, Java, Node.js, Python, Graphics Design, UX Design, Hololens, mySQL, PHP, WebGL...</p>
+            </div>
+            <div class="col-md-4">
+              <h3>Contact</h3>
+              <ul>
+                <li>
+                  hi@yonglinwang.ca
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a class="nav-link" href="/about">My Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pricing/index.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/newsletter">Let's Talk!</a>
-          </li>
+    </div>
+  </div>
+
+  <div class="main">
+    <!-- Add your site or application content here -->
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-brand-container">
+          <a class="nav-brand-type animated" href="/">Yong Lin Wang</a>
+          <button class="mobile-only mobile-control">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <div class="nav-menu-container">
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a class="nav-link" href="/about">My Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="aboutMeTrigger">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link contact-link">Let's Talk!</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <section class="hero">
+      <div class="container filled">
+        <div class="col-md-6 v-center">
+          <div class="hero-content">
+            <h1 class="site-title">
+              <span class="greeting">Hello</span>! I'm Yong Lin.
+            </h1>
+            <p class="hero-intro">I'm an interdisciplinary software developer who is fascinated by software
+              development,
+              bodybuilding, and delicious food.</p>
+            <div class="fun-fact animated fast fadeInUp">
+              <span class="fun-fact-icon animated fast">🎮</span>
+              <p class="animated fast">My favorite video game is Legend of Zelda: Breath of the Wild</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project left">
+      <div class="container-fluid filled">
+        <div class="col-md-7">
+          <div class="preview-image">
+            <div class="reveal_block-img"></div>
+            <img class="image-responsive reveal-img" src="img/test.jpg">
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-3 v-center">
+          <div class="project-desc">
+            <h5 class="project-number">01</h5>
+            <h2>Kitchon App Website</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            <a>View Project</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project">
+      <div class="container-fluid filled">
+        <div class="col-md-1"></div>
+        <div class="col-md-3 v-center">
+          <div class="project-desc">
+            <h5 class="project-number">01</h5>
+            <h2>Kitchon App Website</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            <a>View Project</a>
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-7">
+          <div class="preview-image">
+            <div class="reveal_block-img"></div>
+            <img class="image-responsive reveal-img" src="img/test.jpg">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="project left">
+      <div class="container-fluid filled">
+        <div class="col-md-7">
+          <div class="preview-image">
+            <div class="reveal_block-img"></div>
+            <img class="image-responsive reveal-img" src="img/test.jpg">
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-3 v-center">
+          <div class="project-desc">
+            <h5 class="project-number">01</h5>
+            <h2>Kitchon App Website</h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            <a>View Project</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="col-md-12" style="position: relative">
+          <div class="contact-form v-center">
+            <div class="contact-prompt">
+              <div class="response-icon v-center animated fast hidden">
+                <i class="fas fa-check"></i>
+              </div>
+              <h3 class="animated fast contact-title">Want to <span class="type-write"></span><span class="wrap"></span></h3>
+              <p class="animated fast contact-desc">I enjoy talking to passionate people, if you are interested in
+                working together with me, connect with me, or just want to chat, I'm looking forward to hearing from
+                you~</p>
+              <button class="btn btn-black btn-fancy contact-btn animated fast">Let's Connect!</button>
+            </div>
+            <div class="inline-contact">
+              <h4 class="animated fast info-prompt">Hello there! <input name="name" type="text" class="animated fast contact-info"
+                  placeholder="Your Name" />, your email is <input name="email" type="email" class="animated fast contact-info"
+                  placeholder="Your Email" />. How can I help you today?</h4>
+              <div>
+                <button class="btn btn-black animated fast step2" data-subject="oppo">
+                  I have an opportunity for you
+                </button>
+                <button class="btn btn-black animated fast step2" data-subject="colab">
+                  I want to collaborate
+                </button>
+                <button class="btn btn-black animated fast step2" data-subject="message">
+                  Just want to leave a message
+                </button>
+              </div>
+            </div>
+          </div>
+          <textarea name="message" id="contactMessage" class="hidden animated fast" placeholder="Type in your message here. Say something nice :)"></textarea>
+          <div class="message-tools">
+            <button class="btn btn-black btn-round animated faster send-btn"><i class="far fa-paper-plane"></i></button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div>Brought to you by Yong Lin Wang with 💻</div>
+      <div class="social-media-list">
+        <ul class="social-links">
+          <a href="https://github.com/callmekungfu">
+            <li>Github</li>
+          </a>
+          <a href="https://linkedin.com/in/yonglinwang">
+            <li>LinkedIn</li>
+          </a>
+          <a href="https://www.instagram.com/yonglin_wang/">
+            <li>Instagram</li>
+          </a>
         </ul>
       </div>
-    </div>
-  </nav>
-
-  <section class="hero">
-    <div class="container filled">
-      <div class="col-md-6 v-center">
-        <div class="hero-content">
-          <h1 class="site-title">
-            <span class="greeting">Hello</span>! I'm Yong Lin.
-          </h1>
-          <p class="hero-intro">I'm an interdisciplinary software developer who is fascinated by software development,
-            bodybuilding, and delicious food.</p>
-          <div class="fun-fact animated fast fadeInUp">
-            <span class="fun-fact-icon animated fast">🎮</span>
-            <p class="animated fast">My favorite video game is Legend of Zelda: Breath of the Wild</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="project left">
-    <div class="container-fluid filled">
-      <div class="col-md-7">
-        <div class="preview-image">
-          <div class="reveal_block-img"></div>
-          <img class="image-responsive reveal-img" src="img/test.jpg">
-        </div>
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-3 v-center">
-        <div class="project-desc">
-          <h5 class="project-number">01</h5>
-          <h2>Kitchon App Website</h2>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-          <a>View Project</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="project">
-    <div class="container-fluid filled">
-      <div class="col-md-1"></div>
-      <div class="col-md-3 v-center">
-        <div class="project-desc">
-          <h5 class="project-number">01</h5>
-          <h2>Kitchon App Website</h2>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-          <a>View Project</a>
-        </div>
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-7">
-        <div class="preview-image">
-          <div class="reveal_block-img"></div>
-          <img class="image-responsive reveal-img" src="img/test.jpg">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="project left">
-    <div class="container-fluid filled">
-      <div class="col-md-7">
-        <div class="preview-image">
-          <div class="reveal_block-img"></div>
-          <img class="image-responsive reveal-img" src="img/test.jpg">
-        </div>
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-3 v-center">
-        <div class="project-desc">
-          <h5 class="project-number">01</h5>
-          <h2>Kitchon App Website</h2>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-          <a>View Project</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="contact">
-    <div class="container">
-      <div class="col-md-12" style="position: relative">
-        <div class="contact-form v-center">
-          <div class="contact-prompt">
-            <div class="response-icon v-center animated fast hidden">
-              <i class="fas fa-check"></i>
-            </div>
-            <h3 class="animated fast contact-title">Want to <span class="type-write"></span><span class="wrap"></span></h3>
-            <p class="animated fast contact-desc">I enjoy talking to passionate people, if you are interested in working together with me, connect with me, or just want to chat, I'm looking forward to hearing from you~</p>
-            <button class="btn btn-black btn-fancy contact-btn animated fast">Let's Connect!</button>
-          </div>
-          <div class="inline-contact">
-            <h4 class="animated fast info-prompt">Hello there! <input name="name" type="text" class="animated fast contact-info" placeholder="Your Name"/>, your email is <input name="email" type="email" class="animated fast contact-info" placeholder="Your Email"/>. How can I help you today?</h4>
-            <div>
-              <button class="btn btn-black animated fast step2" data-subject="oppo">
-                I have an opportunity for you
-              </button>
-              <button class="btn btn-black animated fast step2" data-subject="colab">
-                I want to collaborate
-              </button>
-              <button class="btn btn-black animated fast step2" data-subject="message">
-                Just want to leave a message
-              </button>
-            </div>
-          </div>
-        </div>
-        <textarea name="message" id="contactMessage" class="hidden animated fast" placeholder="Type in your message here. Say something nice :)"></textarea>
-        <div class="message-tools">
-          <button class="btn btn-black btn-round animated faster send-btn"><i class="far fa-paper-plane"></i></button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div>Brought to you by Yong Lin Wang with 💻</div>
-    <div class="social-media-list">
-      <ul class="social-links">
-        <a href="https://github.com/callmekungfu"><li>Github</li></a>
-        <a href="https://linkedin.com/in/yonglinwang"><li>LinkedIn</li></a>
-        <a href="https://www.instagram.com/yonglin_wang/"><li>Instagram</li></a>
-      </ul>
-    </div>
-  </footer>
-
+    </footer>
+  </div>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
-
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+  <script src="/js/gsap.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-  <script src="js/anime.min.js"></script>
+  <script src="js/three.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script src="js/link.js"></script>
 
   <script>
     var typeOptions = {
-      strings: [ "work together?", "offer me a job?", "chat?", "tell me a joke?", "make a friend?", "ask me a question?" ],
+      strings: ["work together?", "offer me a job?", "chat?", "tell me a joke?", "make a friend?",
+        "ask me a question?"
+      ],
       typeSpeed: 60,
       backSpeed: 60,
       shuffle: true,
@@ -214,7 +265,6 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-74520113-5');
-
   </script>
 
 </body>
