Fun Facts now working

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             </h1>
             <p class="hero-intro">I'm an interdisciplinary software developer who is fascinated by software
               development,
-              bodybuilding, and delicious food.</p>
-            <div class="fun-fact animated fast fadeInUp">
-              <span class="fun-fact-icon animated fast">🎮</span>
-              <p class="animated fast">My favorite video game is Legend of Zelda: Breath of the Wild</p>
+              bodybuilding, and delicious food. Click the box bellow for some fun facts about me.</p>
+            <div class="fun-fact animated fast">
+              <span class="fun-fact-icon animated fast"></span>
+              <p class="animated fast"></p>
             </div>
           </div>
         </div>
@@ -119,9 +119,9 @@
         <div class="col-md-3 v-center">
           <div class="project-desc">
             <h5 class="project-number">01</h5>
-            <h2>Kitchon App Website</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            <a>View Project</a>
+            <h2>Kitchon App Promotion Website</h2>
+            <p>The front page of Kitchon's identity.</p>
+            <a href="/project/kitchon-website/">View Project</a>
           </div>
         </div>
       </div>
@@ -143,26 +143,6 @@
           <div class="preview-image">
             <div class="reveal_block-img"></div>
             <img class="image-responsive reveal-img" src="img/test.jpg">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="project left">
-      <div class="container-fluid filled">
-        <div class="col-md-7">
-          <div class="preview-image">
-            <div class="reveal_block-img"></div>
-            <img class="image-responsive reveal-img" src="img/test.jpg">
-          </div>
-        </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3 v-center">
-          <div class="project-desc">
-            <h5 class="project-number">01</h5>
-            <h2>Kitchon App Website</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            <a>View Project</a>
           </div>
         </div>
       </div>
