--- a/project/kitchon-website/index.html
+++ b/project/kitchon-website/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Yong Lin Wang | Software Engineering Student + Developer</title>
+  <title>Kitchon Promotional Website | Yong Lin Wang</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -151,10 +151,9 @@
       <div class="col-md-5">
         <h2>Chapter 2</h2>
         <p class="text-muted sub-header">The Long Path of Development</p>
-        <p>After planning out the project in a macro-scale, we decided that if we wanted to complete the project, we
-          needed to work fast, especially since we have other commitments. Step 1, we started combing through showcase
-          sites like awwwards and dribbble for inspirations, then using the inspiration we found, we developed an
-          outline for the website. Finally we started painting out a wireframe mockup for the site.</p>
+        <p>
+          This stage of development involves the technical aspects of the website. Nothing very special here. We opened an organization on GitHub and setup a github page for the project.  
+        </p>
       </div>
       <div class="col-md-1">
 
