Finished kitchon project page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 v-center">
           <div class="project-desc">
-            <h5 class="project-number">01</h5>
+            <h5 class="project-number">2018.09-2018.11</h5>
             <h2>Kitchon App Promotion Website</h2>
             <p>The front page of Kitchon's identity.</p>
             <a href="/project/kitchon-website/">View Project</a>
@@ -132,9 +132,9 @@
         <div class="col-md-1"></div>
         <div class="col-md-3 v-center">
           <div class="project-desc">
-            <h5 class="project-number">01</h5>
-            <h2>Kitchon App Website</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+            <h5 class="project-number">2018.11-2018.12</h5>
+            <h2>Secret Santa for Facebook Messenger</h2>
+            <p>Simplify the way secret santa parties are organized.</p>
             <a>View Project</a>
           </div>
         </div>
@@ -142,7 +142,7 @@
         <div class="col-md-7">
           <div class="preview-image">
             <div class="reveal_block-img"></div>
-            <img class="image-responsive reveal-img" src="img/test.jpg">
+            <img class="image-responsive reveal-img" src="img/secretsanta.jpg">
           </div>
         </div>
       </div>
