--- a/project/kitchon-website/index.html
+++ b/project/kitchon-website/index.html
@@ -25,8 +25,6 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
-  <!-- Add your site or application content here -->
   <!-- Navigation -->
   <nav class="navbar nav-light">
     <div class="nav-container">
@@ -195,6 +193,20 @@
           concept and designing a presentation for the judges and the audience. Like our website, we believed in polish
           over flash, we developed limited demos and focused on selling core beliefs to our audience.
         </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="results">
+    <div class="container">
+      <div class="col-md-12">
+        <h2>Final Results</h2>
+        <p>In the end we completed our pitch and website. You can find more details about this project in the links below</p>
+        <ul>
+          <a href="https://kitcheon.github.io"><li>The Website</li></a>
+          <a href="https://docs.google.com/presentation/d/1CgHCYbRpl5eGBZSA5HsFBPDY6fgaHTQbaNiEUYdf7Sk/edit?usp=sharing"><li>The Pitch</li></a>
+          <a href="https://github.com/kitcheon/kitcheon.github.io"><li>Github Repository</li></a>
+        </ul>
       </div>
     </div>
   </section>
