Updated secret santa project

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h5 class="project-number">2018.11-2018.12</h5>
             <h2>Secret Santa for Facebook Messenger</h2>
             <p>Simplify the way secret santa parties are organized.</p>
-            <a>View Project</a>
+            <a href="/project/secret-santa-for-messenger/">View Project</a>
           </div>
         </div>
         <div class="col-md-1"></div>
