Weekly update - Finished writing about the secret santa project - Mobile optimization for home page - Update to link handling library

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Yong Lin Wang | Software Engineering Student + Developer</title>
-  <meta name="description" content="">
+  <meta name="description" content="I am Yong Lin Wang, a Multidisciplinary Software Developer. A Chinese-Canadian software developer based in Ottawa. I do web design/development, Node.js, and Python the most. I worked freelance and started a start-up with two friends. I love new challenges and experiences! If you got any cool idea don't hesitate to contact me!">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -24,7 +24,7 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-  <div class="about-me hidden animated">
+  <div class="about-me visuallyhidden animated">
     <div class="type-intro container">
       <div class="col-md-12 v-center">
         <p class="visuallyhidden">I am Yong Lin Wang. A Multidisciplinary Software Developer</p>
@@ -33,7 +33,7 @@
           <div class="close-about-us"><i class="fas fa-arrow-left"></i></div>
           <h1>Yong Lin Wang</h1>
           <p class="text-muted sub-header">Hello! Am I the one you are looking for?</p>
-          <p class="about-description">A Chinese-Canadian software developer based in Ottawa. I do web design/development, Java, and Python the most. I worked freelance and started a start-up with two friends. I love new challenges and experiences! If you got any cool idea don't hesitate to contact me! (Ps. I am looking for internship opportunities, please contact me and we can talk more~)</p>
+          <p class="about-description">A Chinese-Canadian software developer based in Ottawa. I do web design/development, Node.js, and Python the most. I worked freelance and started a start-up with two friends. I love new challenges and experiences! If you got any cool idea don't hesitate to contact me! (Ps. I am looking for internship opportunities, please contact me and we can talk more~)</p>
           <div class="container w-100 about-details">
             <div class="col-md-4">
               <h3>Recognitions</h3>
@@ -62,7 +62,6 @@
   </div>
 
   <div class="main">
-    <!-- Add your site or application content here -->
     <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
@@ -75,7 +74,7 @@
         <div class="nav-menu-container">
           <ul class="nav-menu">
             <li class="nav-item">
-              <a class="nav-link" href="/about">My Work</a>
+              <a class="nav-link work-link">My Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="aboutMeTrigger">About Me</a>
@@ -90,7 +89,7 @@
 
     <section class="hero">
       <div class="container filled">
-        <div class="col-md-6 v-center">
+        <div class="col-md-6 col-xs-12 v-center">
           <div class="hero-content">
             <h1 class="site-title">
               <span class="greeting">Hello</span>! I'm Yong Lin.
@@ -99,7 +98,7 @@
               development,
               bodybuilding, and delicious food. Click the box bellow for some fun facts about me.</p>
             <div class="fun-fact animated fast">
-              <span class="fun-fact-icon animated fast"></span>
+              <span class="fun-fact-icon animated fast mobile-hidden"></span>
               <p class="animated fast"></p>
             </div>
           </div>
@@ -107,16 +106,16 @@
       </div>
     </section>
 
-    <section class="project left">
+    <section class="project left first-project">
       <div class="container-fluid filled">
-        <div class="col-md-7">
+        <div class="col-md-7 col-xs-12">
           <div class="preview-image">
             <div class="reveal_block-img"></div>
-            <img class="image-responsive reveal-img" src="img/test.jpg">
+            <img class="image-responsive reveal-img" src="img/test.jpg" alt="Mockup of yong lin's web design project called kitchon">
           </div>
         </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3 v-center">
+        <div class="col-md-1 mobile-hidden"></div>
+        <div class="col-md-3 col-xs-12 v-center">
           <div class="project-desc">
             <h5 class="project-number">2018.09-2018.11</h5>
             <h2>Kitchon App Promotion Website</h2>
@@ -129,8 +128,14 @@
 
     <section class="project">
       <div class="container-fluid filled">
-        <div class="col-md-1"></div>
-        <div class="col-md-3 v-center">
+        <div class="col-md-1 mobile-hidden"></div>
+        <div class="col-md-7 col-xs-12 mobile-only">
+          <div class="preview-image">
+            <div class="reveal_block-img"></div>
+            <img class="image-responsive reveal-img" src="img/secretsanta.jpg" alt="Mockup for yonglin's secret santa messenger bot">
+          </div>
+        </div>
+        <div class="col-md-3 col-xs-12 v-center">
           <div class="project-desc">
             <h5 class="project-number">2018.11-2018.12</h5>
             <h2>Secret Santa for Facebook Messenger</h2>
@@ -138,8 +143,8 @@
             <a href="/project/secret-santa-for-messenger/">View Project</a>
           </div>
         </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-7">
+        <div class="col-md-1 mobile-hidden"></div>
+        <div class="col-md-7 col-xs-12 mobile-hidden">
           <div class="preview-image">
             <div class="reveal_block-img"></div>
             <img class="image-responsive reveal-img" src="img/secretsanta.jpg">
