--- a/project/secret-santa-for-messenger/index.html
+++ b/project/secret-santa-for-messenger/index.html
@@ -122,80 +122,16 @@
   <section class="fullscreen-slider">
     <div class="carousel">
       <div class="carousel-cell">
-        <img src="/img/kitchon/prototype1.jpg" alt="orange tree" />
+        <img src="/img/secret-santa/1.jpg" alt="Screenshot of getting started with the bot" />
       </div>
       <div class="carousel-cell">
-        <img src="/img/kitchon/reference_short.png" alt="orange tree" />
+        <img src="/img/secret-santa/2.jpg" alt="Screenshot of party creation screen" />
       </div>
       <div class="carousel-cell">
-        <img src="/img/kitchon/prototype2.jpg" alt="orange tree" />
+        <img src="/img/secret-santa/3.jpg" alt="Screenshot of conversation thread" />
       </div>
       <div class="carousel-cell">
-        <img src="/img/kitchon/prototype3.jpg" alt="orange tree" />
-      </div>
-      <div class="carousel-cell">
-        <img src="/img/kitchon/prototype4.jpeg" alt="orange tree" />
-      </div>
-      <div class="carousel-cell">
-        <img src="/img/kitchon/prototype5.jpeg" alt="orange tree" />
-      </div>
-    </div>
-    <div class="text-center">
-      <p class="text-muted">
-        Swipe to see all Images.
-      </p>
-    </div>
-  </section>
-
-  <section class="chapter2 project-details">
-    <div class="container">
-      <div class="col-md-5">
-        <h2>Chapter 2</h2>
-        <p class="text-muted sub-header">The Long Path of Development</p>
-        <p>
-          The development of this project involves two aspects, one is the website. Our team took a long time to polish
-          the website since we consider it the front page of our identity. Overall. our team have pushed 119 commits to
-          the website. We wrote nearly 6000 lines of code. For the website, I was honored to be given the
-          responsibility of developing the overall UI component kit and the home page.
-        </p>
-      </div>
-      <div class="col-md-1">
-
-      </div>
-      <div class="col-md-6 v-center">
-        <img class="image-responsive" src="/img/kitchon/chapter2.jpg">
-      </div>
-    </div>
-    <div class="container full-width-paragraph">
-      <div class="col-md-12">
-        <p>
-          The website development process mostly went as expected, meaning there was never any bugs or features that
-          took too long to build. Thanks to the careful planning and prior experiences, I was able to complete my
-          portion of the website ahead of schedule and work on stabilizing the performance of the page to a relatively
-          polished degree.
-        </p>
-        <p>
-          Since a few website ago, I developed an interest for integrating motion design and animation into the user
-          interaction aspects of the page. The overall goal is to develop attention grabbing animations that are
-          polished, responsive, and not distracting. With these concepts in mind, I implemented several animation
-          libraries and developed custom animation keyframes in CSS. The following video is an in development version
-          of the website.
-        </p>
-        <div class="article-video">
-          <video controls>
-            <source src="/assets/kitchon_dev.mp4" type="video/mp4">
-          </video>
-          <div class="text-center">
-            <p class="text-muted">
-              Early Version of Home Page
-            </p>
-          </div>
-        </div>
-        <p>
-          During this time, we also worked on the development of our pitch, this involves finalizing the product
-          concept and designing a presentation for the judges and the audience. Like our website, we believed in polish
-          over flash, we developed limited demos and focused on selling core beliefs to our audience.
-        </p>
+        <img src="/img/secret-santa/4.jpg" alt="Screenshot of start party page" />
       </div>
     </div>
   </section>
@@ -204,17 +140,16 @@
     <div class="container">
       <div class="col-md-12">
         <h2>Final Results</h2>
-        <p>In the end we completed our pitch and website. You can find more details about this project in the links
-          below</p>
+        <p>The project is currently under development. However, the first trial with friends went swimmingly. Currently I am working on expanding the features of the bot. Here are some thinks with more information. </p>
         <ul>
-          <a href="https://kitcheon.github.io">
-            <li>The Website</li>
+          <a href="https://www.facebook.com/secretsantafriends/" target="_blank">
+            <li>App Facebook Page</li>
           </a>
-          <a href="https://docs.google.com/presentation/d/1CgHCYbRpl5eGBZSA5HsFBPDY6fgaHTQbaNiEUYdf7Sk/edit?usp=sharing">
-            <li>The Pitch</li>
-          </a>
-          <a href="https://github.com/kitcheon/kitcheon.github.io">
+          <a href="https://github.com/callmekungfu/secret-santa-for-facebook-messenger" target="_blank">
             <li>Github Repository</li>
+          </a>
+          <a href="https://github.com/callmekungfu/secret-santa-for-facebook-messenger/projects/1" target="_blank">
+            <li>Roadmap</li>
           </a>
         </ul>
       </div>
