SEO and general improvements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 class="animated fast"></h2>
         <div class="bio animated fast">
           <div class="close-about-us"><i class="fas fa-arrow-left"></i></div>
-          <h1>Yong Lin Wang</h1>
+          <h2>Yong Lin Wang</h2>
           <p class="text-muted sub-header">Hello! Am I the one you are looking for?</p>
           <p class="about-description">A Chinese-Canadian software developer based in Ottawa. I do web design/development, Node.js, and Python the most. I worked freelance and started a start-up with two friends. I love new challenges and experiences! If you got any cool idea don't hesitate to contact me! (Ps. I am looking for internship opportunities, please contact me and we can talk more~)</p>
           <div class="container w-100 about-details">
@@ -78,6 +78,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="aboutMeTrigger">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="assets/resume.pdf">Resume</a>
             </li>
             <li class="nav-item">
               <a class="nav-link contact-link">Let's Talk!</a>
