--- a/project/kitchon-website/index.html
+++ b/project/kitchon-website/index.html
@@ -43,6 +43,9 @@
             <a class="nav-link" href="/">About Me</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/assets/resume.pdf">Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/#contact">Let's Talk!</a>
           </li>
         </ul>
