--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -36,6 +36,9 @@
                         <a class="btn btn-black btn-fancy" href="/">
                             Let's go!
                         </a>
+                        <a class="btn btn-black btn-fancy" href="/assets/resume.pdf">
+                            View My Resume
+                        </a>
                     </div>
                 </div>
             </div>
