--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -26,13 +26,13 @@
     <!-- Add your site or application content here -->
     <section class="hero">
         <div class="container filled">
-            <div class="col-md-6 v-center">
+            <div class="col-md-6 col-xs-12 v-center">
                 <div class="hero-content">
                     <h1 class="site-title">
                         <span class="greeting">Hello</span>! I'm Yong Lin.
                     </h1>
                     <p class="hero-intro mb-50">Thank you for using my QR code to contact me! Welcome to my site!</p>
-                    <div>
+                    <div class="qrcode-btn-container">
                         <a class="btn btn-black btn-fancy" href="/">
                             Let's go!
                         </a>
