Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </h1>
             <p class="hero-intro">I'm an interdisciplinary software developer who is fascinated by software
               development,
-              bodybuilding, and delicious food. Click the box bellow for some fun facts about me.</p>
+              bodybuilding, and delicious food. Click the box below for some fun facts about me.</p>
             <div class="fun-fact animated fast">
               <span class="fun-fact-icon animated fast mobile-hidden"></span>
               <p class="animated fast"></p>
