added google tracking

--- a/index.html
+++ b/index.html
@@ -242,17 +242,14 @@
     new Typed(".type-write", typeOptions);
   </script>
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74520113-5"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74520113-6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-74520113-5');
+    gtag('config', 'UA-74520113-6');
   </script>
 
 </body>
