--- a/project/secret-santa-for-messenger/index.html
+++ b/project/secret-santa-for-messenger/index.html
@@ -187,18 +187,16 @@
   <script src="/js/project.js"></script>
   <script src="/js/link.js"></script>
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74520113-5"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74520113-6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-74520113-5');
+    gtag('config', 'UA-74520113-6');
   </script>
+
 
 </body>
 
