--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
       </div>
     </section>
 
+    <section class="project">
+        <div class="container-fluid filled">
+          <div class="col-md-1 mobile-hidden"></div>
+          <div class="col-md-7 col-xs-12 mobile-only">
+            <div class="preview-image">
+              <div class="reveal_block-img"></div>
+              <img class="image-responsive reveal-img" src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/000/759/601/datas/gallery.jpg" alt="Nutlogger front-end demo">
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-12 v-center">
+            <div class="project-desc">
+              <h5 class="project-number">Hackathon, Front-end</h5>
+              <h2>Nutlogger</h2>
+              <p>"Introducing Nutlogger. A revolutionary way of recording your daily nutrition with Computer Vision"</p>
+              <div class="project-links">
+                <a href="https://github.com/nutlogger/frontend" target="_blank">Codebase</a>
+                <a href="https://devpost.com/software/nutlogger" target="_blank">Devpost</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-1 mobile-hidden"></div>
+          <div class="col-md-7 col-xs-12 mobile-hidden">
+            <div class="preview-image">
+              <div class="reveal_block-img"></div>
+              <img class="image-responsive reveal-img" src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/000/759/601/datas/gallery.jpg">
+            </div>
+          </div>
+        </div>
+      </section>
+
     <section class="project left first-project">
       <div class="container-fluid filled">
         <div class="col-md-7 col-xs-12">
@@ -120,10 +150,14 @@
         <div class="col-md-1 mobile-hidden"></div>
         <div class="col-md-3 col-xs-12 v-center">
           <div class="project-desc">
-            <h5 class="project-number">2018.09-2018.11</h5>
+            <h5 class="project-number">Web design, Front-end</h5>
             <h2>Kitchon App Promotion Website</h2>
             <p>The front page of Kitchon's identity.</p>
-            <a href="/project/kitchon-website/">View Project</a>
+            <div class="project-links">
+              <a href="https://github.com/kitcheon/kitcheon.github.io">Codebase</a>
+              <a href="https://kitcheon.github.io/">Demo</a>
+              <a href="/project/kitchon-website/">Write up</a>
+            </div>
           </div>
         </div>
       </div>
@@ -140,10 +174,13 @@
         </div>
         <div class="col-md-3 col-xs-12 v-center">
           <div class="project-desc">
-            <h5 class="project-number">2018.11-2018.12</h5>
+            <h5 class="project-number">Full-Stack, Web Development</h5>
             <h2>Secret Santa for Facebook Messenger</h2>
             <p>Simplify the way secret santa parties are organized.</p>
-            <a href="/project/secret-santa-for-messenger/">View Project</a>
+            <div class="project-links">
+              <a href="https://github.com/callmekungfu/secret-santa-for-facebook-messenger">Codebase</a>
+              <a href="/project/secret-santa-for-messenger/">Write up</a>
+            </div>
           </div>
         </div>
         <div class="col-md-1 mobile-hidden"></div>
