updated some field

--- a/index.html
+++ b/index.html
@@ -45,13 +45,48 @@
             </div>
             <div class="col-md-4">
               <h3>Skills</h3>
-              <p>HTML5, CSS3, jQuery, javascript, ReactJS, Java, Node.js, Python, Graphics Design, UX Design, Hololens, mySQL, PHP, WebGL...</p>
+              <p>
+                Javascript (ES6), 
+                Python 3+, 
+                Java, 
+                Ruby, 
+                TypeScript
+              </p>
+              <p>
+                Sass, CSS3, 
+                ReactJS, 
+                Redux, 
+                Angular, 
+                HTML5, 
+                Java Sling, 
+                Docker, 
+                Git, 
+                Bash, 
+                Webpack, 
+                Google Cloud Platform, 
+                Azure App Service, 
+                Linux, 
+                Windows, 
+                Adobe XD, Photoshop, 
+                NodeJS (ExpressJS), 
+                Database, 
+                MongoDB, 
+                PostgreSQL, 
+                MySQL
+              </p>
+                
+              <p>
+                AWS CloudWatch, 
+                AWS API Gateway, 
+                AWS Lambda, 
+                AWS SDK (NodeJS)
+              </p>
             </div>
             <div class="col-md-4">
               <h3>Contact</h3>
               <ul>
                 <li>
-                  hi@yonglinwang.ca
+                  wangyonglin1999@gmail.com
                 </li>
               </ul>
             </div>
@@ -81,6 +116,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="assets/resume.pdf">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/callmekungfu">Github</a>
             </li>
             <li class="nav-item">
               <a class="nav-link contact-link">Let's Talk!</a>
